--- a/main.html
+++ b/main.html
@@ -287,10 +287,10 @@
 			<div class="container">
 				<div class="header__block">
 					<div class="header__logo _show _light">
-						<a href="" target="_self"><img src="images/logo.png" alt="logo"></a>
+						<a href="" target="_self"><img src="vite-project/public/logo.png" alt="logo"></a>
 					</div>
 					<div class="header__logo _dark">
-						<a href="" target="_self"><img src="images/logo_dark.png" alt="logo"></a>
+						<a href="" target="_self"><img src="vite-project/public/logo_dark.png" alt="logo"></a>
 					</div>
 					<nav class="header__nav">
 						<button class="header__btn-main-new _hover01" id="btnMainNew"><a href="#popNewCard">Создать новую задачу</a></button>
